@@ -1,5 +1,12 @@
 2009-11-01  Stefan Kost  <ensonic@users.sf.net>
 
+	* src/bmltest_info.c:
+	* src/bmltest_info.h:
+	* tests/testmachine.sh:
+	  Print creating and init time. Add to testmachine script.
+
+2009-11-01  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	* configure.ac:
 	* dllwrapper/wine/elfdll.c:
